--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express-validator": "^7.0.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "js-yaml": "^4.1.0",
     "mongoose": "^8.3.4",
     "morgan": "~1.9.1"
   }
